2008-1-21 Yu-Sung Su     <ys463@columbia.edu>  
   * man/mi: description about add.priors.
   * R/mi: merge augment.data and K into add.priors.

2008-1-17 Yu-Sung Su     <ys463@columbia.edu>  
   * man/mi.compeleted: add an example of mi.data.list
   * R/AllInternal: add .preprocess.data, .postprocess.data, .create.missing
   * R/AllGeneric: add mi.data.list
   * R/mi.completed: add mi.data.list.mi

2008-1-8 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi.info.update: make mi.info.update into S3 method.

2008-1-7 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): depend abind package
   * array.append and array.append3 are obsolete.  Use abind instead.

2008-1-5 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.02-03

2008-12-30 Yu-Sung Su     <ys463@columbia.edu>  
   * add K parameter to mi procedures.  If K>0, will cool the mi with probabilty q such
    that q = K/iteration.  This will create noise to the mi process by drawing
    from marginals.

2008-12-28 Yu-Sung Su     <ys463@columbia.edu>  
   * add augment.data option to mi procedures.  If TRUE, will augment the data 
    with 10% of the observaed data.  
   * return data.tmp into the global if mi abrupted with errors. 


2008-10-7 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.02-02
   * create display methods for glm.mi & lm.mi
   * move some internal functions to AllInternal 
   * create glm.mi & lm.mi classes

2008-10-6  Yu-Sung Su     <ys463@columbia.edu>  
    * reverse S4 coef methods back to S3 to pass R check
    * reverse S4 fitted methods back to S3 to pass R check
    * reverse S4 residuals methods back to S3 to pass R check
    * reverse S4 plot methods back to S3 to pass R check
    * currently, no resid S3 methods

2008-9-9  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-01
    * First release!