@@ -1,3 +1,12 @@
+2008-1-26 Yu-Sung Su     <ys463@columbia.edu>  
+   * clean up redundant code
+   * no more squareroot-continuous
+   * R/AllInternal: add internal function from mi.info
+   * R/mi.info: 
+      1. remove some internal functions to AllInternal
+      2. correct imp.formula and move to AllInternal
+  
+
 2008-1-21 Yu-Sung Su     <ys463@columbia.edu>  
    * man/mi: description about add.priors.
    * R/mi: merge augment.data and K into add.priors.
